--- a/random-forest.ipynb
+++ b/random-forest.ipynb
@@ -21,12 +21,375 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Phoenix SkyHarbor</th>\n",
+       "      <th>DAL</th>\n",
+       "      <th>810.0</th>\n",
+       "      <th>N10SDX</th>\n",
+       "      <th>DTW</th>\n",
+       "      <th>PHX</th>\n",
+       "      <th>8:54 AM EST</th>\n",
+       "      <th>11:13 AM MST</th>\n",
+       "      <th>8.0</th>\n",
+       "      <th>126.6</th>\n",
+       "      <th>10:51 AM MST</th>\n",
+       "      <th>Just Outside City of PHX</th>\n",
+       "      <th>Pilot</th>\n",
+       "      <th>Greeting</th>\n",
+       "      <th>\"Approach Delta 810. Descending down to 7000.\"</th>\n",
+       "      <th>Unnamed: 15</th>\n",
+       "      <th>Greeting.1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>N10SDX</td>\n",
+       "      <td>DTW</td>\n",
+       "      <td>PHX</td>\n",
+       "      <td>8:54 AM EST</td>\n",
+       "      <td>11:13 AM MST</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>126.6</td>\n",
+       "      <td>10:51 AM MST</td>\n",
+       "      <td>Just Outside City of PHX</td>\n",
+       "      <td>ATC</td>\n",
+       "      <td>Greeting</td>\n",
+       "      <td>\"Delta 810. Phoenix Approach. Good morning.\"</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Greeting</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>N10SDX</td>\n",
+       "      <td>DTW</td>\n",
+       "      <td>PHX</td>\n",
+       "      <td>8:54 AM EST</td>\n",
+       "      <td>11:13 AM MST</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>126.6</td>\n",
+       "      <td>10:54 AM MST</td>\n",
+       "      <td>Inside City of PHX, North of Airport</td>\n",
+       "      <td>ATC</td>\n",
+       "      <td>Direction to Descend</td>\n",
+       "      <td>\"Delta 810, descend to maintain 4000.\"</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Direction to Descend</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>N10SDX</td>\n",
+       "      <td>DTW</td>\n",
+       "      <td>PHX</td>\n",
+       "      <td>8:54 AM EST</td>\n",
+       "      <td>11:13 AM MST</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>126.6</td>\n",
+       "      <td>10:54 AM MST</td>\n",
+       "      <td>Inside City of PHX, North of Airport</td>\n",
+       "      <td>Pilot</td>\n",
+       "      <td>Confirmation to ATC</td>\n",
+       "      <td>\"Delta 810, down to 4000.\"</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Response to Direction from ATC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>N10SDX</td>\n",
+       "      <td>DTW</td>\n",
+       "      <td>PHX</td>\n",
+       "      <td>8:54 AM EST</td>\n",
+       "      <td>11:13 AM MST</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>126.6</td>\n",
+       "      <td>10:55 AM MST</td>\n",
+       "      <td>Inside City of PHX, North of Airport</td>\n",
+       "      <td>ATC</td>\n",
+       "      <td>Direction to Turn from ATC</td>\n",
+       "      <td>\"Delta 810, maintain 3000, turn left heading 1...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Direction to Turn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>N10SDX</td>\n",
+       "      <td>DTW</td>\n",
+       "      <td>PHX</td>\n",
+       "      <td>8:54 AM EST</td>\n",
+       "      <td>11:13 AM MST</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>126.6</td>\n",
+       "      <td>10:55 AM MST</td>\n",
+       "      <td>Inside City of PHX, North of Airport</td>\n",
+       "      <td>Pilot</td>\n",
+       "      <td>Confirmation to ATC</td>\n",
+       "      <td>\"3000. Left 1870. Delta 810.\"</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Response to Direction from ATC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>380</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SWA</td>\n",
+       "      <td>556.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BWI</td>\n",
+       "      <td>LAS</td>\n",
+       "      <td>10:18AM EST</td>\n",
+       "      <td>12:25PM PST</td>\n",
+       "      <td>26L</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>12:22 PM PST</td>\n",
+       "      <td>Inside City of Las Vegas, East of Airport</td>\n",
+       "      <td>Pilot</td>\n",
+       "      <td>Confirmation to ATC</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Response to Direction from ATC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>381</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SWA</td>\n",
+       "      <td>556.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BWI</td>\n",
+       "      <td>LAS</td>\n",
+       "      <td>10:18AM EST</td>\n",
+       "      <td>12:25PM PST</td>\n",
+       "      <td>26L</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>12:23 PM PST</td>\n",
+       "      <td>Inside City of Las Vegas, East of Airport</td>\n",
+       "      <td>ATC</td>\n",
+       "      <td>Direction to Descend</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Direction to Descend</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>382</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SWA</td>\n",
+       "      <td>556.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BWI</td>\n",
+       "      <td>LAS</td>\n",
+       "      <td>10:18AM EST</td>\n",
+       "      <td>12:25PM PST</td>\n",
+       "      <td>26L</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>12:23 PM PST</td>\n",
+       "      <td>Inside City of Las Vegas, East of Airport</td>\n",
+       "      <td>Pilot</td>\n",
+       "      <td>Confirmation to ATC</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Response to Direction from ATC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>383</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SWA</td>\n",
+       "      <td>556.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BWI</td>\n",
+       "      <td>LAS</td>\n",
+       "      <td>10:18AM EST</td>\n",
+       "      <td>12:25PM PST</td>\n",
+       "      <td>26L</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>12:24 PM PST</td>\n",
+       "      <td>Inside City of Las Vegas, East of Airport</td>\n",
+       "      <td>ATC</td>\n",
+       "      <td>Direction to Contact another tower</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Direction to Contact another tower</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>384</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SWA</td>\n",
+       "      <td>556.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BWI</td>\n",
+       "      <td>LAS</td>\n",
+       "      <td>10:18AM EST</td>\n",
+       "      <td>12:25PM PST</td>\n",
+       "      <td>26L</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>12:24 PM PST</td>\n",
+       "      <td>Inside City of Las Vegas, East of Airport</td>\n",
+       "      <td>Pilot</td>\n",
+       "      <td>Confirmation to ATC</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Response to Direction from ATC</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>385 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Phoenix SkyHarbor  DAL  810.0  N10SDX  DTW  PHX  8:54 AM EST  \\\n",
+       "0                  NaN  DAL  810.0  N10SDX  DTW  PHX  8:54 AM EST   \n",
+       "1                  NaN  DAL  810.0  N10SDX  DTW  PHX  8:54 AM EST   \n",
+       "2                  NaN  DAL  810.0  N10SDX  DTW  PHX  8:54 AM EST   \n",
+       "3                  NaN  DAL  810.0  N10SDX  DTW  PHX  8:54 AM EST   \n",
+       "4                  NaN  DAL  810.0  N10SDX  DTW  PHX  8:54 AM EST   \n",
+       "..                 ...  ...    ...     ...  ...  ...          ...   \n",
+       "380                NaN  SWA  556.0     NaN  BWI  LAS  10:18AM EST   \n",
+       "381                NaN  SWA  556.0     NaN  BWI  LAS  10:18AM EST   \n",
+       "382                NaN  SWA  556.0     NaN  BWI  LAS  10:18AM EST   \n",
+       "383                NaN  SWA  556.0     NaN  BWI  LAS  10:18AM EST   \n",
+       "384                NaN  SWA  556.0     NaN  BWI  LAS  10:18AM EST   \n",
+       "\n",
+       "     11:13 AM MST  8.0  126.6  10:51 AM MST  \\\n",
+       "0    11:13 AM MST  8.0  126.6  10:51 AM MST   \n",
+       "1    11:13 AM MST  8.0  126.6  10:54 AM MST   \n",
+       "2    11:13 AM MST  8.0  126.6  10:54 AM MST   \n",
+       "3    11:13 AM MST  8.0  126.6  10:55 AM MST   \n",
+       "4    11:13 AM MST  8.0  126.6  10:55 AM MST   \n",
+       "..            ...  ...    ...           ...   \n",
+       "380   12:25PM PST  26L  135.0  12:22 PM PST   \n",
+       "381   12:25PM PST  26L  135.0  12:23 PM PST   \n",
+       "382   12:25PM PST  26L  135.0  12:23 PM PST   \n",
+       "383   12:25PM PST  26L  135.0  12:24 PM PST   \n",
+       "384   12:25PM PST  26L  135.0  12:24 PM PST   \n",
+       "\n",
+       "                      Just Outside City of PHX  Pilot  \\\n",
+       "0                     Just Outside City of PHX    ATC   \n",
+       "1         Inside City of PHX, North of Airport    ATC   \n",
+       "2         Inside City of PHX, North of Airport  Pilot   \n",
+       "3         Inside City of PHX, North of Airport    ATC   \n",
+       "4         Inside City of PHX, North of Airport  Pilot   \n",
+       "..                                         ...    ...   \n",
+       "380  Inside City of Las Vegas, East of Airport  Pilot   \n",
+       "381  Inside City of Las Vegas, East of Airport    ATC   \n",
+       "382  Inside City of Las Vegas, East of Airport  Pilot   \n",
+       "383  Inside City of Las Vegas, East of Airport    ATC   \n",
+       "384  Inside City of Las Vegas, East of Airport  Pilot   \n",
+       "\n",
+       "                               Greeting  \\\n",
+       "0                              Greeting   \n",
+       "1                  Direction to Descend   \n",
+       "2                   Confirmation to ATC   \n",
+       "3            Direction to Turn from ATC   \n",
+       "4                   Confirmation to ATC   \n",
+       "..                                  ...   \n",
+       "380                 Confirmation to ATC   \n",
+       "381                Direction to Descend   \n",
+       "382                 Confirmation to ATC   \n",
+       "383  Direction to Contact another tower   \n",
+       "384                 Confirmation to ATC   \n",
+       "\n",
+       "        \"Approach Delta 810. Descending down to 7000.\"  Unnamed: 15  \\\n",
+       "0         \"Delta 810. Phoenix Approach. Good morning.\"          NaN   \n",
+       "1               \"Delta 810, descend to maintain 4000.\"          NaN   \n",
+       "2                           \"Delta 810, down to 4000.\"          NaN   \n",
+       "3    \"Delta 810, maintain 3000, turn left heading 1...          NaN   \n",
+       "4                        \"3000. Left 1870. Delta 810.\"          NaN   \n",
+       "..                                                 ...          ...   \n",
+       "380                                                NaN          NaN   \n",
+       "381                                                NaN          NaN   \n",
+       "382                                                NaN          NaN   \n",
+       "383                                                NaN          NaN   \n",
+       "384                                                NaN          NaN   \n",
+       "\n",
+       "                             Greeting.1  \n",
+       "0                              Greeting  \n",
+       "1                  Direction to Descend  \n",
+       "2        Response to Direction from ATC  \n",
+       "3                     Direction to Turn  \n",
+       "4        Response to Direction from ATC  \n",
+       "..                                  ...  \n",
+       "380      Response to Direction from ATC  \n",
+       "381                Direction to Descend  \n",
+       "382      Response to Direction from ATC  \n",
+       "383  Direction to Contact another tower  \n",
+       "384      Response to Direction from ATC  \n",
+       "\n",
+       "[385 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Google Sheet Link: https://docs.google.com/spreadsheets/d/1RiU9c3YihCsAqh18C25WMfTxkOiAf-nXhxAWtEaKLA0/edit#gid=0\n",
+    "import pandas as pd\n",
+    "\n",
+    "sheet_id = '1RiU9c3YihCsAqh18C25WMfTxkOiAf-nXhxAWtEaKLA0'\n",
+    "xls = pd.ExcelFile(f\"https://docs.google.com/spreadsheets/d/{sheet_id}/export?format=xlsx\")\n",
+    "\n",
+    "arrivals = pd.read_excel(xls, 'Arrivals', header = 1)\n",
+    "departures = pd.read_excel(xls, 'Departures', header = 1)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -38,14 +401,19 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.2"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9d4300f365f03f1fcc8f4fd3b0e59bc483e43e450e424a43d376e4175f7d1793"
+   }
   }
  },
  "nbformat": 4,
