Clean up files to match allow ease of install

--- a/random-forest.ipynb
+++ b/random-forest.ipynb
@@ -2,10 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 'pip install manager' incase you can't download these packages\n",
+    "!pip install pandas\n",
+    "!pip install numpy\n",
+    "!pip install matplotlib"
+   ],
    "metadata": {
     "collapsed": false
-   },
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
@@ -1722,12 +1747,6 @@
    ],
    "source": [
     "#Google Sheet Link: https://docs.google.com/spreadsheets/d/1RiU9c3YihCsAqh18C25WMfTxkOiAf-nXhxAWtEaKLA0/edit#gid=0\n",
-    "# 'pip install manager' incase you can't download these packages\n",
-    "import pandas as pd #pip install pandas\n",
-    "import numpy as np #pip install numpy\n",
-    "import matplotlib as mpl #pip install matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "pd.set_option('display.max_rows', 100) #Displays a max of 100 rows for testing\n",
     "\n",
     "sheet_id = '1RiU9c3YihCsAqh18C25WMfTxkOiAf-nXhxAWtEaKLA0'\n",
@@ -1741,13 +1760,16 @@
     "departures = departures.dropna(thresh=14)\n",
     "\n",
     "#You'll need this 'pip install -U scikit-learn scipy matplotlib' to install it, or 'pip3 install -U scikit-learn scipy matplotlib' for Python3\n",
-    "from sklearn.ensemble import RandomForestClassifier \n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "rf = RandomForestClassifier()\n",
     "#rf.fit(x,y)\n",
     "#RandomForestClassifier()\n",
     "\n",
     "departures"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
