various install fixes and depth limiting on tree visualization

--- a/random-forest.ipynb
+++ b/random-forest.ipynb
@@ -115,7 +115,6 @@
     }
    ],
    "source": [
-    "import pydotplus as pydotplus\n",
     "# %pip install manager incase you can't download these packages\n",
     "%pip install pandas\n",
     "%pip install numpy\n",
@@ -298,7 +297,8 @@
     "# export as dot data for visualization\n",
     "dot_data = StringIO()\n",
     "estimator = model_rf.estimators_[0] # pick a single tree\n",
-    "export_graphviz(estimator, out_file=dot_data, feature_names=['index'], class_names=['Communication Type/Reason for Speaking.1', 'test', 'a', 'b', 'c', 'd', 'a', 'b', 'c', 'd', 'a', 'b', 'c', 'd'], rounded=True, proportion=False, precision=1, filled=True)\n",
+    "tree_depth = 3\n",
+    "export_graphviz(estimator, max_depth=tree_depth, out_file=dot_data, feature_names=['index'], class_names=['Communication Type/Reason for Speaking.1', 'test', 'a', 'b', 'c', 'd', 'a', 'b', 'c', 'd', 'a', 'b', 'c', 'd'], rounded=True, proportion=False, precision=1, filled=True)\n",
     "\n",
     "graph = pydotplus.graph_from_dot_data(dot_data.getvalue())\n",
     "# save tree as png\n",
